--- a/src/app/components/Pages/contact/contact.component.css
+++ b/src/app/components/Pages/contact/contact.component.css
@@ -47,3 +47,13 @@ button {
   background: #2c584b;
   border: 0;
 }
+
+@media (max-width: 768px) {
+
+  .main {
+    display: grid;
+  }
+  .image {
+    display: none;
+  }
+}
